[tool.poetry]
name = "lefteye"
version = "0.1.0"
description = ""
authors = ["Anton Shtarev <trollknurr@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
opencv-contrib-python-headless = "^4.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
